--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^1.6.5
+  audioplayers: ^0.14.2
+  stereo: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   volume: ^0.1.0
-  assets_audio_player: ^1.2.3
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +45,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/entry.png
-    - assets/sound/
+    - assets/sound/woman/
+    - assets/sound/man/
   # An image asset can refer to one or more resolution-specific "variants", see
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
