--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,22 @@ dependencies:
   path_provider: ^1.6.5
   audioplayers: ^0.14.2
   stereo: ^1.0.2
+  responsive_screen: ^1.0.0
+  intl: ^0.16.1
+  flutter_bloc: ^3.2.0
+  dio: ^3.0.9
+  equatable: ^1.1.1
+  line_icons: ^0.2.0
+  shimmer: ^1.1.0
+  shared_preferences: ^0.5.6+2
+  webview_flutter: ^0.3.19+9
+  built_value: ^7.0.9
+  built_collection: ^4.3.2
+  http: ^0.12.0+4
+  url_launcher: ^5.4.2
+  flutter_spinkit: 4.1.2
+  google_nav_bar: ^2.0.1
+  google_fonts: 0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
