--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,12 @@ dependencies:
     sdk: flutter
   path_provider: ^1.6.5
   audioplayers: ^0.14.2
-
+  intl: ^0.15.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
   volume: ^0.1.0
+  stereo: ^1.0.2
+  just_audio: ^0.1.4
 
 dev_dependencies:
   flutter_test:
@@ -43,8 +44,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/entry.png
-    - assets/
+    - assets/images/
+    - assets/sound/man/
+    - assets/sound/woman/
+    - assets/sound1/man/
+    - assets/sound1/woman/
+    - assets/sound3/man/
+    - assets/sound3/woman/
   # An image asset can refer to one or more resolution-specific "variants", see
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
