--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,13 @@ dependencies:
     sdk: flutter
   path_provider: ^1.6.5
   intl: ^0.15.8
-  timer_count_down: ^1.0.1
+  wave: ^0.0.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   volume: ^0.1.0
   just_audio: ^0.1.4
+  flutter_bloc: ^3.2.0
+  equatable: ^1.1.1
 
 dev_dependencies:
   flutter_test:
