--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,14 @@ dependencies:
   path_provider: ^1.6.5
   intl: ^0.15.8
   wave: ^0.0.8
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   volume: ^0.1.0
   just_audio: ^0.1.4
   flutter_bloc: ^3.2.0
   equatable: ^1.1.1
+  rxdart: ^0.23.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,7 @@ flutter:
     - assets/sound1/woman/
     - assets/sound3/man/
     - assets/sound3/woman/
+    - assets/audiometry/
   # An image asset can refer to one or more resolution-specific "variants", see
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
