--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,14 +22,14 @@ dependencies:
   path_provider: ^1.6.5
   intl: ^0.15.8
   wave: ^0.0.8
-
+  audio: ^0.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  volume: ^0.1.0
   just_audio: ^0.1.4
-  flutter_bloc: ^3.2.0
+  flutter_bloc: ^4.0.0
   equatable: ^1.1.1
-  rxdart: ^0.23.0
+  rxdart: ^0.24.0
+  volume: ^0.1.4
 
 dev_dependencies:
   flutter_test:
